tests/mm0_mmu/fail/bad-int2.mm0
--                   V--  not an int
prefix p : $+$ prec 1.0;
